<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageCapa"
        android:layout_width="0dp"
        android:layout_height="320dp"
        android:scaleType="centerCrop"
        android:src="@drawable/teste"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineSuperiorHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineInferiorHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/linhaGuiaEsquerda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/linhaGuiaDireita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.92" />


    <ImageView
        android:id="@+id/logoNetflix"
        android:layout_width="45dp"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/linhaGuiaEsquerda" />


    <TextView
        android:id="@+id/textSeries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/s_ries"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/logoNetflix"
        app:layout_constraintStart_toEndOf="@id/logoNetflix"
        app:layout_constraintTop_toTopOf="@id/logoNetflix"
        app:layout_constraintVertical_bias="0.512" />


    <TextView
        android:id="@+id/textFilmes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:text="@string/filmes"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/textSeries"
        app:layout_constraintStart_toEndOf="@id/textSeries"
        app:layout_constraintTop_toTopOf="@id/textSeries"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textMinhaLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minha_lista"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/textFilmes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textFilmes"
        app:layout_constraintTop_toTopOf="@id/textFilmes"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageViewNomeFilme"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:src="@drawable/Adventure_Time_logo"
        app:layout_constraintTop_toBottomOf="@id/guidelineSuperiorHorizontal"
        app:layout_constraintBottom_toTopOf="@id/guidelineInferiorHorizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/textEmpolgante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="12dp"
        android:text="@string/aventura"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/linhaGuiaEsquerda"
        app:layout_constraintTop_toBottomOf="@id/imageViewNomeFilme" />

    <TextView
        android:id="@+id/textDeus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:text="@string/anima_o"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/textEmpolgante"
        app:layout_constraintTop_toTopOf="@id/textEmpolgante" />

    <TextView
        android:id="@+id/textEsperanca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/com_dia"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@id/textDeus"
        app:layout_constraintStart_toEndOf="@id/textDeus"
        app:layout_constraintEnd_toEndOf="@id/linhaGuiaDireita" />


    <Button
        android:id="@+id/btMinhaLista"
        android:layout_width="116dp"
        android:layout_height="62dp"
        android:backgroundTint="@android:color/transparent"
        android:drawableTop="@drawable/ic_adicionar"
        android:text="@string/minha_lista1"
        android:textSize="10sp"
        app:iconSize="8sp"
        app:layout_constraintTop_toBottomOf="@id/textDeus"
        app:layout_constraintStart_toStartOf="@id/linhaGuiaEsquerda"
        android:layout_marginTop="28dp" />

    <Button
        android:id="@+id/btAssistir"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:drawableLeft="@drawable/ic_executar"
        android:text="@string/assistir"
        android:textColor="@color/white"
        android:backgroundTint="#C40234"
        app:layout_constraintTop_toBottomOf="@id/textDeus"
        app:layout_constraintStart_toEndOf="@id/btMinhaLista"
        app:layout_constraintEnd_toStartOf="@id/btDetalhes"
        android:layout_marginTop="28dp" />

    <Button
        android:id="@+id/btDetalhes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:drawableTop="@drawable/ic_informacao"
        android:text="@string/detalhes"
        android:textColor="@color/white"
        app:iconSize="8dp"
        android:textSize="11sp"
        app:layout_constraintTop_toTopOf="@id/btAssistir"
        app:layout_constraintBottom_toBottomOf="@id/btAssistir"
        app:layout_constraintEnd_toEndOf="@id/linhaGuiaDireita" />



    <TextView
        android:id="@+id/textLancamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/lan_amento"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/linhaGuiaEsquerda"
        app:layout_constraintTop_toBottomOf="@id/btAssistir" />

    <ImageView
        android:id="@+id/img1"
        android:layout_width="85dp"
        android:layout_height="56dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/download"
        app:layout_constraintStart_toStartOf="@id/linhaGuiaEsquerda"
        app:layout_constraintTop_toBottomOf="@id/textLancamento" />

    <ImageView
        android:id="@+id/img2"
        android:layout_width="85dp"
        android:layout_height="56dp"
        android:src="@drawable/mob"
        app:layout_constraintTop_toTopOf="@id/img1"
        app:layout_constraintStart_toEndOf="@id/img1"
        app:layout_constraintEnd_toStartOf="@id/img3" />


    <ImageView
        android:id="@+id/img3"
        android:layout_width="85dp"
        android:layout_height="56dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/ianowt"
        app:layout_constraintEnd_toEndOf="@id/linhaGuiaDireita"
        app:layout_constraintTop_toTopOf="@id/img1" />

    <TextView
        android:id="@+id/nomeAluno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Vitória Lima do Nascimento"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="12dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
